# EASY-EAI-Toolkit-C-Demo

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  build_all_demo.sh
algorithm-body_pose_detect/: CMakeLists.txt  build.sh  test-body-pose-detect.cpp
algorithm-body_pose_detect/test-body-pose-detect-release/: test-body-pose-detect
algorithm-bsd_person_detect/: CMakeLists.txt  test-bsd-person-detect.cpp
algorithm-car_detect/: CMakeLists.txt  test-car-detect.cpp
algorithm-face_detect/: CMakeLists.txt  build.sh  test-face-detect.cpp
algorithm-face_landmark98/: CMakeLists.txt  build.sh  test-face-landmark98.cpp
algorithm-face_mask_judgement/: CMakeLists.txt  build.sh  test-face-mask-judgement.cpp
algorithm-face_pose_estimation/: CMakeLists.txt  build.sh  test-face-pose-estimation.cpp
algorithm-face_recognition/: CMakeLists.txt  build.sh  test-face-recognition.cpp
algorithm-fire_detect/: CMakeLists.txt  build.sh  test-fire-detect.cpp
algorithm-geometry/: CMakeLists.txt  test-geometry.c  test-point_n_rect.c  test-square.c
algorithm-helmet_detect/: CMakeLists.txt  build.sh  test-helmet-detect.cpp
algorithm-moving_detect/: CMakeLists.txt  build.sh  test-moving-detect.cpp
algorithm-moving_detect/test-moving-detect-release/: test-moving-detect
algorithm-ocr/: CMakeLists.txt  test-ocr.cpp
algorithm-ocr/Release/: dict_text.txt
algorithm-person_detect/: CMakeLists.txt  build.sh  test-person-detect.cpp
algorithm-person_detect/test-person-detect-release/: test-person-detect
algorithm-phonecall_detect/: CMakeLists.txt  test-phonecall-detect.cpp
algorithm-qrdecode/: CMakeLists.txt  build.sh  test-qrdecode.cpp
algorithm-qrdecode/test-qrdecode-release/: test-qrdecode
algorithm-self_learning/: CMakeLists.txt  build.sh  test-self_learning.cpp
algorithm-site_safety/: CMakeLists.txt  build.sh  test-site-safety.cpp
algorithm-smoke_detect/: CMakeLists.txt  build.sh  test-smoke-detect.cpp
common-QRCode/: CMakeLists.txt  test-QRCode.c
common-base64/: CMakeLists.txt  build.sh  test-base64.c
common-data_check/: CMakeLists.txt  test-data-check.c
common-file_opt/: CMakeLists.txt  build.sh  test-file-opt.c
common-font_engine/: CMakeLists.txt  build.sh  test-font_engine.cpp
common-iniWrapper/: CMakeLists.txt  test-iniWrapper.c
common-ipc/: CMakeLists.txt  ipcData.h  test-IPC-opt_AClient.c  test-IPC-opt_BClient.c  test-IPC-opt_Client.c  test-IPC-opt_Server.c
common-json_parser/: CMakeLists.txt  test-json-parser.c
common-string_opt/: CMakeLists.txt  test-string-opt.c
common-system_opt/: CMakeLists.txt  test-IPC-opt_Client.c  test-IPC-opt_Server.c  test-netpara-opt.c  test-system-opt.c  test-thread-opt.c  test-timepara-opt.c
common-yaml/: CMakeLists.txt  test-yaml.cpp
easyeai-api/algorithm_api/app_empower/: empower.h
easyeai-api/algorithm_api/body_pose_detect/: body_pose_detect.h  body_pose_detect_postprocess.h
easyeai-api/algorithm_api/car_detect/: car_detect.h  car_postprocess.h
easyeai-api/algorithm_api/face_alignment/: face_alignment.h
easyeai-api/algorithm_api/face_detect/: decode.h  face_detect.h  generator.h  tools.h
easyeai-api/algorithm_api/face_landmark98/: face_landmark98.h
easyeai-api/algorithm_api/face_mask_judgement/: face_mask_judgement.h
easyeai-api/algorithm_api/face_pose_estimation/: face_pose_estimation.h
easyeai-api/algorithm_api/face_recognition/: face_recognition.h
easyeai-api/algorithm_api/fire_detect/: fire_detect.h  fire_postprocess.h
easyeai-api/algorithm_api/geometry/: geometry.h
easyeai-api/algorithm_api/helmet_detect/: helmet_detect.h  helmet_postprocess.h
easyeai-api/algorithm_api/moving_detect/: moving_detect.h
easyeai-api/algorithm_api/ocr/: OCRDetection.h  OCRRecognition.h  OcrUtils.h  clipper.h  file_utils.h  ocr.h
easyeai-api/algorithm_api/person_detect/: person_detect.h  person_postprocess.h
easyeai-api/algorithm_api/phonecall_detect/: phonecall_detect.h  phonecall_postprocess.h
easyeai-api/algorithm_api/qrdecode/: qrdecode.h
easyeai-api/algorithm_api/self_learning/: self_learning.h
easyeai-api/algorithm_api/site_safety/: site_safety.h  site_safety_postprocess.h
media-endeCode_api/: CMakeLists.txt  test-videoDeCode_api.c  test-videoEnCode_api.c
netProtocol-https/: CMakeLists.txt  test-https.c
netProtocol-mqtt/: CMakeLists.txt  test-mqtt_publish.c  test-mqtt_subscription.c
netProtocol-mqtt/server_tool/: mosquitto
netProtocol-rtsp/: CMakeLists.txt  test-rtsp.c
peripheral-audio/: CMakeLists.txt  rkmedia_ai_test.c  rkmedia_ao_test.c  test-ai.c  test-ao.c  wavHeader.h
peripheral-audio/rkmedia/: rkmedia_ai.h  rkmedia_api.h  rkmedia_buffer.h  rkmedia_common.h  rkmedia_muxer.h  rkmedia_vdec.h  rkmedia_venc.h  rkmedia_vi.h  rkmedia_vmix.h
peripheral-backlight/: CMakeLists.txt  build.sh  test_bl_ctl.c
peripheral-camera/: CMakeLists.txt  test-mipi-ir.c  test-mipi-rgb.c  test-multi-usb-cam.c  test-usb-cam.c
peripheral-can/: CMakeLists.txt  test-can-reception.c  test-can-send.c
peripheral-disp-cam/: CMakeLists.txt  test-disp-cam.c  test-disp-pro-cam.c  test-stress.c
peripheral-display/: 720X1280.rgb  CMakeLists.txt  photo.nv12  test-display-pro.c  test-display.c
peripheral-gpio/: CMakeLists.txt  test-gpio.c
peripheral-iic/: CMakeLists.txt  test-ads1115.c
peripheral-iic/include/: ads1115.h  test-ads1115.h
peripheral-network/: CMakeLists.txt  test-netpara-opt.c
peripheral-network_tcp/: CMakeLists.txt  test-tcpclient.c  test-tcpserver.c
peripheral-network_udp/: CMakeLists.txt  udpclient.c  udpserver.c
peripheral-pwm/: CMakeLists.txt  test-pwm.c
peripheral-serialport/: CMakeLists.txt  test-serial-port.c
peripheral-socketcan/: CMakeLists.txt
peripheral-spi/: CMakeLists.txt  fram.c  rfid.c  spidev_test.c
peripheral-spi/dev/: mb85rs64.c  rc522.c
peripheral-spi/include/: mb85rs64.h  rc522.h  rfid.h
peripheral-spi/src/: rc522.c  rfid.c
peripheral-tcpsocket/: CMakeLists.txt  tcpclient.c  tcpserver.c
peripheral-touch_screen/: CMakeLists.txt  test-ts.c
peripheral-watchdog/: CMakeLists.txt  build.sh  test-WDT.c
(+42 files in other folders)
